syntax = "proto3";

package main;
option go_package="/.;pb";

message PingRequest{}

message PongResponse{
  bool ok = 1;
}

service PingService {
  rpc Ping(PingRequest) returns (PongResponse) {};
}